k8s/secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prlab
